<resources>
	<string	name="app_name">TODO list</string>
    <string name="tutorial_1_title">Tutorial #1</string>
    <string name="tutorial_2_title">Tutorial #2</string>
    <string name="tutorial_3_title">Tutorial #3</string>
    <string name="tutorial_4_title">Tutorial #4</string>
    <string name="tutorial_1_content">Welcome to TODO list app!\n\nHere you can create your own lists so you won\'t forget to buy anything from the store, or to take equipment to a trip.\n\nOn the main screen all your lists appears in minimize mode. Pressing on the little triangle will expand the list and show it all. (On the settings screen you can change the settings of the minimize mode to your favorite size).</string>
    <string name="tutorial_2_content">To add a new list just tap on the big, gray \'plus\' button at the bottom of the screen.\n\nTo see existing list, click on it, and it\'ll enter editing mode, where you can change the background color (upper right on the screen to show/hide coloring menu), and of course add new items to the list, and updating, deleting or mark as \'done\' existing items.</string>
    <string name="tutorial_3_content">At the beginning the title of the list will be in focus, but one click on \'enter\' will move the cursor to \'add new item\' line.  Note: each item can hold only one line.\nSo if \'enter\' was pressed - new item will be added, or the next item will be in the updating line.</string>
    <string name="tutorial_4_content">Enjoy!</string>
    <string name="about_title">About</string>
    <string name="about_content">This app created by Chananya © חנניה. You may use it and share it freely, but you may not charge money for it.\nYou can send me your comments and ideas to chananya@g.jct.ac.il.  Enjoy!</string>
    <string name="ok">OK</string>
    <string name="copied_to_clipboard">Preview copied to clipboard!</string>
    <string name="exported_to_clipboard">All the data exported to clipboard!</string>
    <string name="restore_settings_content">Restore all settings?</string>
    <string name="restore_settings_title">Restore</string>
    <string name="delete_all_title">Delete</string>
    <string name="delete_all_content">Delete all existing data?\nThis action cannot be undone.</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="got_it">Got it!</string>
    <string name="done">Done</string>
    <string name="show_again">Show me also next time</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete this list?</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="all">All</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="new_item">New item</string>
    <string name="update_item">Update item</string>
    <string name="line_to_show">Items in minimize mode:</string>
    <string name="chars_to_show">Characters limit in minimize mode:</string>
    <string name="restore_to_default">Restore settings to default</string>
    <string name="delete_all_existing_data">Delete all existing data</string>
    <string name="show_tutorial_on_next_opening">Show tutorial on next opening</string>
    <string name="lt_all_existing_data_gt"><![CDATA[<-- All existing data -->]]></string>
    <string name="my_list">My list</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="import_warning_title1" >Import data - delete current data</string>
    <string name="import_warning_content1" >Import new data from clipboard, and place it instead of the current data.</string>
    <string name="import_warning_title2" >Are you sure?</string>
    <string name="import_warning_content2" >All the current data will be lost.\nInstead, the data will be:</string>
    <string name="nothing_in_clipboard" >The clipboard is empty. Please copy the data to import</string>
    <string name="imported_successfully" >The data imported successfully!</string>
</resources>
