<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">
		<android.support.v7.widget.Toolbar
			android:id="@+id/_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>
	</android.support.design.widget.AppBarLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">
		<LinearLayout
			android:id="@+id/linear_all"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:background="#CFD8DC"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/linear6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/textview4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/line_to_show"
					android:textSize="12sp"
					android:textColor="#000000"/>
				<TextView
					android:id="@+id/lines_count_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="0"
					android:textSize="12sp"
					android:textColor="#000000"/>
			</LinearLayout>
			<SeekBar
				android:id="@+id/lines_count_sb"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingRight="8dp"
				android:max="16"/>
			<LinearLayout
				android:id="@+id/linear7"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/textview6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/chars_to_show"
					android:textSize="12sp"
					android:textColor="#000000"/>
				<TextView
					android:id="@+id/character_limit_tv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="0"
					android:textSize="12sp"
					android:textColor="#000000"/>
			</LinearLayout>
			<SeekBar
				android:id="@+id/character_limit_sb"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8dp"
				android:paddingRight="8dp"
				android:max="50"/>
			<Button
				android:id="@+id/restore_b"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="8dp"
				android:background="#B0BEC5"
				android:text="@string/restore_to_default"
				android:textSize="12sp"
				android:textColor="#000000"
				android:layout_gravity="center_horizontal"/>
			<LinearLayout
				android:id="@+id/linear8"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/copy_iv"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:src="@drawable/ic_content_copy_black"
					android:scaleType="fitXY"/>
				<TextView
					android:id="@+id/textview7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/lt_all_existing_data_gt"
					android:textSize="12sp"
					android:textColor="#000000"/>
				<ImageView
					android:id="@+id/share_iv"
					android:layout_width="45dp"
					android:layout_height="45dp"
					android:src="@drawable/ic_share_black"
					android:scaleType="fitXY"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear_import_export"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<Button
					android:id="@+id/import_data"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:padding="8dp"
					android:background="#B0BEC5"
					android:text="@string/import_data"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_gravity="center_horizontal"/>
				<Button
					android:id="@+id/export_data"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="#B0BEC5"
					android:text="@string/export_data"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_gravity="center_horizontal"/>
			</LinearLayout>
			<Button
				android:id="@+id/delete_all_b"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="8dp"
				android:background="#B0BEC5"
				android:text="@string/delete_all_existing_data"
				android:textSize="12sp"
				android:textColor="#000000"
				android:layout_gravity="center_horizontal"/>
			<Button
				android:id="@+id/tutorial_b"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="8dp"
				android:background="#B0BEC5"
				android:text="@string/show_tutorial_on_next_opening"
				android:textSize="12sp"
				android:textColor="#000000"
				android:layout_gravity="center_horizontal"/>
			<ImageView
				android:id="@+id/help_iv"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:layout_marginTop="20dp"
				android:src="@drawable/ic_help_black"/>
		</LinearLayout>
	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
